# n55-bot

./: .env.prod  MED.csv  README.md  n55-q_requirements.txt  n55_requirements.txt  new_ship.py  数据.csv
n55/: pyproject.toml  数据 - 副本.csv
n55-q/: .env.prod  pyproject.toml
n55-q/src/plugins/: FINDID.py  FindTime.py  GPT.py  GPTdaybat.txt  YSpic.py  banben.py  banu.py  bullet.py  fatedata.py  finddate.py  fudu.py  heimingdan.py  huilv.py  info.py  info.py.bac  roll.py  serpop.py  ship.py  shipP.py  sys_info.py  test.py  tiebaGlao.py  weaponinfo.py  weapons.csv  yaoingma.py  yaoqingma.csv  zhongchou.py  中英对照.csv
n55-q/src/plugins/MP3/: TK11.silk.amr  TK4.silk.amr
n55-q/src/plugins/choujiang/: choujiang.py.bac  daybat.txt
n55-q/src/plugins/duijue/: __init__.py  daybat.txt  dayship.txt  duijue.py
n55/src/plugins/: FINDID.py  FINDwanjia.py  FindTime.py  GPT.py  GPTcom.py  MED.csv  SCpic.py.bac  YSpic.py  alist.xls  bullet.py  fatedata.py  find.py.bac  fudu.py  huilv.py  info.py  pic.py.bac  roll.py  serpop.py  ship.py.bac  test.py  tiebalist.txt  weaponinfo.py  yaoingma.py  zhongchou.py  新建文本文档.txt  船只价格表.csv
n55/src/plugins/MP3/: SCA.silk.amr  TK1.silk.amr  TK10.silk.amr  TK12.silk.amr  TK13.silk.amr  TK15.silk.amr  TK16.silk.amr  TK2.silk.amr  TK3.silk.amr  TK6.silk.amr  TK7.silk.amr  TK8.silk.amr
n55/src/plugins/choujiang/: 奖池.csv
n55/src/plugins/duijue/: daybat.txt  dayship.txt  战斗船指数.csv
src/plugins/: GPTdaybat.txt  MED.py  QF.py  QF.py.bac  banben.py  banu.py  finddate.py  huanying.py  lunpan.py  ship.py  shipP.py  shipinfo.csv  sys_info.py  tiebaGlao.py  (+1 more)
(+13 files in other folders)
