[project]
name = "n55-q"
version = "0.1.0"
description = "n55-q"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "QQ", module_name = "nonebot.adapters.qq" }
]
plugins = ["nonebot_plugin_apscheduler","nonebot_plugin_fortune","nonebot_plugin_memes", "nonebot_plugin_userinfo", "nonebot_plugin_session"]
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]
